@@ -15,6 +15,8 @@ import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Direction;
 import net.minecraft.world.World;
 
+import java.util.Locale;
+
 public class BlockPixieHouse extends BlockWithEntity {
     public static final DirectionProperty FACING = DirectionProperty.of("facing", Direction.Type.HORIZONTAL);
 
@@ -24,7 +26,7 @@ public class BlockPixieHouse extends BlockWithEntity {
     }
 
     public static String name(String type) {
-        return "pixie_house_%s".formatted(type);
+        return String.format(Locale.ROOT, "pixie_house_%s", type);
     }
 
     @Override
